k8s/applications/services/homeautomation/evcc/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evcc
  namespace: homeautomation
spec:
  selector:
    matchLabels:
      app: evcc
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: evcc
    spec:
      enableServiceLinks: False
      nodeSelector:
        kubernetes.io/hostname: ln-k8s-wkr-1.leachnet
      imagePullSecrets:
         - name: dockerconfigjson-github-com
      containers:
        - name: evcc
          image: ghcr.io/duckfullstop/evcc-hacky:latest
          resources:
           requests:
             memory: "100Mi"
             cpu: "50m"
           limits:
             memory: "750Mi"
             cpu: "500m"
          ports:
          - containerPort: 7070
            protocol: TCP
            name: http
          volumeMounts:
          - name: config
            mountPath: /etc/evcc.yaml
            readOnly: true
            subPath: evcc.yaml
          - name: persist
            mountPath: /root/.evcc
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/evcc
                - health
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 30
          startupProbe:
            exec:
              command:
                - /usr/local/bin/evcc
                - health
            periodSeconds: 5
            failureThreshold: 20
            timeoutSeconds: 10
      volumes:
      - name: config
        secret:
          secretName: evcc-config
      - name: persist
        persistentVolumeClaim:
          claimName: evcc
